--- a/src/main/resources/assets/patternbetter/lang/zh_cn.json
+++ b/src/main/resources/assets/patternbetter/lang/zh_cn.json
@@ -3,7 +3,17 @@
   "patternbetter.configuration.slotvalue": "me拓展样板供应器槽位数量",
   "patternbetter.configuration.pagebutton": "是否开启新版按钮样式",
   "patternbetter.configuration.jumpbox": "是否开启跳转框",
+  "patternbetter.configuration.editmode": "是否开启样板翻倍编辑按钮",
+  "patternbetter.configuration.balancemode": "是否开启样板翻倍平衡按钮",
   "gui.pattern_provider.prev_page": "上一页",
   "gui.pattern_provider.next_page": "下一页",
-  "patternbetter.configuration.patternsinto": "是否开启快速放入样板按钮"
+  "patternbetter.configuration.patternsinto": "是否开启快速放入样板按钮",
+  "gui.patternbetter.button.editon": "开启编辑模式",
+  "gui.patternbetter.button.editoff": "关闭编辑模式",
+  "gui.patternbetter.button.reverseAll": "反转所有状态",
+  "gui.patternbetter.button.reverseThisPage": "反转本页状态",
+  "gui.patternbetter.balance": "平衡样板翻倍数",
+  "gui.patternbetter.balance.tooltip": "寻找最大样板翻倍数以对所有样板翻倍数进行平衡",
+  "gui.patternbetter.patternsInto": "上传样板",
+  "gui.patternbetter.patternsInto.tooltip": "上传背包内所有样板到供应器"
 }
